ASintacitcoGH/src/semantico.java
/* semantico.java */
/* Generated By:JavaCC: Do not edit this line. semantico.java */
import java.io.*;
class semantico implements semanticoConstants {
        public static void main( String[] args )throws ParseException, Exception
        {
                try
                {
                    File fe = new File("archivo.txt");
                        BufferedReader entrada;

                        entrada = new BufferedReader(new FileReader(fe));

                semantico analizador = new semantico(entrada) ;
                        analizador.Programa();
                        System.out.println("\u005ct =>**** Fin del Analisis **** <=.");

                }
                catch(ParseException e)
                {
                        System.out.println(e.getMessage());
                        System.out.println("\u005ct =>**** Fin del Analisis **** <=.");
                    System.out.println("\u005ct =>**** Hubo algun problema con el archivo de entrada **** <=.");
                }

                TokenAsignaciones.MostrarTablaSimbolos();
                TokenAsignaciones.MostrarTablaFunciones();
        }

//Declaracion de la estructura general del programa
  static final public void Programa() throws ParseException {
    jj_consume_token(PROGRAMA);
    jj_consume_token(IDENTIFICADOR);
    jj_consume_token(LLAVEIZQ);
    Cuerpo();
    jj_consume_token(LLAVEDER);
    jj_consume_token(0);
  }

//Declaracion del cuerpo del programa
  static final public void Cuerpo() throws ParseException {TokenAsignaciones.SetTables();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case FLOAT:
      case CHAR:
      case STRING:
      case BOOL:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      VariablesGlobales();
    }
    Principal();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case FLOAT:
      case CHAR:
      case STRING:
      case BOOL:{
        ;
        break;
        }
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      Implementa_Funciones();
    }
  }

//Declaracion de las variables en general
  static final public void VariablesGlobales() throws ParseException {int intTD;
Token tok_var;
    TiposDatos();
intTD = token.kind;
    jj_consume_token(DOSPUNTOS);
    tok_var = jj_consume_token(IDENTIFICADOR);
tok_var= new Token (intTD, tok_var.image);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case CORIZQ:{
      vector(tok_var);
      break;
      }
    case PUNTOYCOMA:
    case COMA:{
      dec_glob(tok_var);
      break;
      }
    case PARIZQ:{
      funcion(tok_var);
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//Declaracion de vectores
  static final public void vector(Token tok_var) throws ParseException {
TokenAsignaciones.insertarSimbolo(tok_var,tok_var);
    jj_consume_token(CORIZQ);
    jj_consume_token(NUMERO);
    jj_consume_token(CORDER);
    jj_consume_token(PUNTOYCOMA);
  }

//Declaracion de varibles globales
  static final public void dec_glob(Token tok_var) throws ParseException {Token par;
TokenAsignaciones.insertarSimbolo(tok_var,tok_var);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMA:{
        ;
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        break label_3;
      }
      jj_consume_token(COMA);
      par = jj_consume_token(IDENTIFICADOR);
TokenAsignaciones.insertarSimbolo(par,tok_var);
    }
    jj_consume_token(PUNTOYCOMA);
  }

//Declaracion Funciones
  static final public void funcion(Token tok_var) throws ParseException {int intTD;
 Token par;
    jj_consume_token(PARIZQ);
TokenAsignaciones.insertarFuncion(tok_var);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMA:
      case INT:
      case FLOAT:
      case CHAR:
      case STRING:
      case BOOL:{
        ;
        break;
        }
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case FLOAT:
      case CHAR:
      case STRING:
      case BOOL:{
        TiposDatos();
intTD = token.kind;
        jj_consume_token(DOSPUNTOS);
        par = jj_consume_token(IDENTIFICADOR);
par= new Token (intTD, par.image); TokenAsignaciones.insertarParametros(tok_var,par);
        break;
        }
      case COMA:{
        jj_consume_token(COMA);
        TiposDatos();
intTD = token.kind;
        jj_consume_token(DOSPUNTOS);
        par = jj_consume_token(IDENTIFICADOR);
par= new Token (intTD, par.image);
 TokenAsignaciones.insertarParametros(tok_var,par);
        break;
        }
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(PARDER);
    jj_consume_token(PUNTOYCOMA);
  }

//Parte inicial de las declaraciones
  static final public Token tok_var() throws ParseException {int intTD;
  Token tok_var;
    TiposDatos();
intTD = token.kind;
    jj_consume_token(DOSPUNTOS);
    tok_var = jj_consume_token(IDENTIFICADOR);
tok_var= new Token (intTD,tok_var.image);
{if ("" != null) return tok_var;}
    throw new Error("Missing return statement in function");
  }

//Parametros de las funciones
  static final public Token parametros() throws ParseException {Token par=null;
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMA:
      case INT:
      case FLOAT:
      case CHAR:
      case STRING:
      case BOOL:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case FLOAT:
      case CHAR:
      case STRING:
      case BOOL:{
        par = tok_var();
        break;
        }
      case COMA:{
        jj_consume_token(COMA);
        par = tok_var();
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return par;}
    throw new Error("Missing return statement in function");
  }

//definicin de main
  static final public void Principal() throws ParseException {
    jj_consume_token(MAIN);
    jj_consume_token(LLAVEIZQ);
    Sentencias();
    jj_consume_token(LLAVEDER);
  }

// Implementacion de las funciones
  static final public void Implementa_Funciones() throws ParseException {int t1,t2;
Token tok_var,par;
    TiposDatos();
t1 = token.kind;
    jj_consume_token(DOSPUNTOS);
    tok_var = jj_consume_token(IDENTIFICADOR);
tok_var= new Token (t1, tok_var.image);
    jj_consume_token(PARIZQ);
TokenAsignaciones.verificarFuncion1(tok_var);
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMA:
      case INT:
      case FLOAT:
      case CHAR:
      case STRING:
      case BOOL:{
        ;
        break;
        }
      default:
        jj_la1[8] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case FLOAT:
      case CHAR:
      case STRING:
      case BOOL:{
        TiposDatos();
t2 = token.kind;
        jj_consume_token(DOSPUNTOS);
        par = jj_consume_token(IDENTIFICADOR);
par= new Token (t2, par.image); TokenAsignaciones.verificarFuncion2(tok_var,par);
        break;
        }
      case COMA:{
        jj_consume_token(COMA);
        TiposDatos();
t2 = token.kind;
        jj_consume_token(DOSPUNTOS);
        par = jj_consume_token(IDENTIFICADOR);
par= new Token (t2, par.image); TokenAsignaciones.verificarFuncion2(tok_var,par);
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(PARDER);
    cuerpo_Fun(tok_var);
  }

//Cuerpo de las funciones
  static final public void cuerpo_Fun(Token tok_var) throws ParseException {Token nombre_Fun;
    jj_consume_token(LLAVEIZQ);
    Sentencias();
    jj_consume_token(RETURN);
    nombre_Fun = jj_consume_token(IDENTIFICADOR);
    jj_consume_token(PUNTOYCOMA);
    jj_consume_token(LLAVEDER);
  }

//Variables locales 
  static final public void VariablesLocales() throws ParseException {int intTD;
        Token tok_var;
    TiposDatos();
intTD = token.kind;
    jj_consume_token(DOSPUNTOS);
    tok_var = jj_consume_token(IDENTIFICADOR);

    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IGUAL:{
      VariablesAsignacion(tok_var);
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      ;
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case COMA:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_7;
      }
      jj_consume_token(COMA);
      tok_var = jj_consume_token(IDENTIFICADOR);

      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IGUAL:{
        VariablesAsignacion(tok_var);
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        ;
      }
    }
    jj_consume_token(PUNTOYCOMA);
    VS();
  }

// Definicion de las variables de asignacion
  static final public void VariablesAsignacion(Token v1) throws ParseException {Token v2;
        Token v3;
        String res;
        boolean imp = false;
    jj_consume_token(IGUAL);
    TiposAsignaciones();
v2 = token;
                TokenAsignaciones.induccion_var(v1, v2);

                //res = TokenAsignaciones.checkAsing(v1, v2);
                //if(res != " "){System.out.println(res);imp = true;}

    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MAS:
      case MENOS:
      case POR:
      case DIVIDE:
      case NUMERO:
      case BOOLEANO:
      case IDENTIFICADOR:
      case DECIMAL:
      case CADENA:
      case CARACTER:{
        ;
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        break label_8;
      }
      OpAritmetico();
      TiposAsignaciones();
v3 = token;
                TokenAsignaciones.induccion_var(v1, v3);
                //res = TokenAsignaciones.checkAsing(v1, v3);
                //if(res != " " && !imp){System.out.println(res);}

    }
  }

  static final public void VS() throws ParseException {
    if (jj_2_1(3)) {
      VariablesLocales();
    } else {
      Sentencias();
    }
  }

// definicion de las sentencias que se pueden realizar en las funciones
  static final public void Sentencias() throws ParseException {
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IF:
      case DO:
      case WRITE:
      case READ:
      case INT:
      case FLOAT:
      case CHAR:
      case STRING:
      case BOOL:
      case IDENTIFICADOR:{
        ;
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INT:
      case FLOAT:
      case CHAR:
      case STRING:
      case BOOL:{
        VariablesLocales();
        break;
        }
      case IF:{
        SentenciaIf();
        break;
        }
      case DO:{
        SentenciaDo();
        break;
        }
      default:
        jj_la1[15] = jj_gen;
        if (jj_2_2(2)) {
          SentenciaAsignacion();
          jj_consume_token(PUNTOYCOMA);
TokenAsignaciones.segunda = 0;
        } else {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case WRITE:{
            SentenciaWrite();
            break;
            }
          case READ:{
            SentenciaRead();
            jj_consume_token(PUNTOYCOMA);
            break;
            }
          default:
            jj_la1[16] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
      }
    }
  }

//tipos de datos de los identificadores, vectores y funciones
  static final public void TiposDatos() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case INT:{
      jj_consume_token(INT);
      break;
      }
    case FLOAT:{
      jj_consume_token(FLOAT);
      break;
      }
    case STRING:{
      jj_consume_token(STRING);
      break;
      }
    case CHAR:{
      jj_consume_token(CHAR);
      break;
      }
    case BOOL:{
      jj_consume_token(BOOL);
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

// IF
  static final public void SentenciaIf() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(PARIZQ);
    A();
    jj_consume_token(PARDER);
    jj_consume_token(THEN);
    jj_consume_token(LLAVEIZQ);
    Sentencias();
    jj_consume_token(LLAVEDER);
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ELSE:{
        ;
        break;
        }
      default:
        jj_la1[18] = jj_gen;
        break label_10;
      }
      Sino();
    }
  }

  static final public void Sino() throws ParseException {
    jj_consume_token(ELSE);
    jj_consume_token(LLAVEIZQ);
    Sentencias();
    jj_consume_token(LLAVEDER);
  }

  static final public void A() throws ParseException {
    Comparaciones();
    label_11:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:
      case AND:
      case NUMERO:
      case IDENTIFICADOR:{
        ;
        break;
        }
      default:
        jj_la1[19] = jj_gen;
        break label_11;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case OR:
      case AND:{
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case AND:{
          jj_consume_token(AND);
          break;
          }
        case OR:{
          jj_consume_token(OR);
          break;
          }
        default:
          jj_la1[20] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
        }
      default:
        jj_la1[21] = jj_gen;
        ;
      }
      Comparaciones();
    }
  }

// Definicion de Comparaciones posibles
  static final public void Comparaciones() throws ParseException {
    Valor();
    Operadores();
    Valor();
  }

  static final public void Valor() throws ParseException {
    if (jj_2_3(2)) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFICADOR:{
        jj_consume_token(IDENTIFICADOR);
        break;
        }
      case NUMERO:{
        jj_consume_token(NUMERO);
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUMERO:
      case IDENTIFICADOR:{
        Expresion();
        break;
        }
      default:
        jj_la1[23] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void Expresion() throws ParseException {
    if (jj_2_4(2)) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUMERO:{
        jj_consume_token(NUMERO);
        break;
        }
      case IDENTIFICADOR:{
        jj_consume_token(IDENTIFICADOR);
        break;
        }
      default:
        jj_la1[24] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } else {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case NUMERO:
      case IDENTIFICADOR:{
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFICADOR:{
          jj_consume_token(IDENTIFICADOR);
          break;
          }
        case NUMERO:{
          jj_consume_token(NUMERO);
          break;
          }
        default:
          jj_la1[25] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        OpAritmetico();
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFICADOR:{
          jj_consume_token(IDENTIFICADOR);
          break;
          }
        case NUMERO:{
          jj_consume_token(NUMERO);
          break;
          }
        default:
          jj_la1[26] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
        }
      default:
        jj_la1[27] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void Operadores() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IGUALIGUAL:{
      jj_consume_token(IGUALIGUAL);
      break;
      }
    case MENORIGUAL:{
      jj_consume_token(MENORIGUAL);
      break;
      }
    case MAYORIGUAL:{
      jj_consume_token(MAYORIGUAL);
      break;
      }
    case DIFERENTE:{
      jj_consume_token(DIFERENTE);
      break;
      }
    case MAYOR:{
      jj_consume_token(MAYOR);
      break;
      }
    case MENOR:{
      jj_consume_token(MENOR);
      break;
      }
    default:
      jj_la1[28] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//Definicion de operadores aritmeticos
  static final public int OpAritmetico() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MAS:{
      jj_consume_token(MAS);
{if ("" != null) return 1;}
      break;
      }
    case MENOS:{
      jj_consume_token(MENOS);
{if ("" != null) return 1;}
      break;
      }
    case POR:{
      jj_consume_token(POR);
{if ("" != null) return 1;}
      break;
      }
    case DIVIDE:{
      jj_consume_token(DIVIDE);
{if ("" != null) return 1;}
      break;
      }
    default:
      jj_la1[29] = jj_gen;
{if ("" != null) return 0;}
{if ("" != null) return 0;}
    }
    throw new Error("Missing return statement in function");
  }

//DO
  static final public void SentenciaDo() throws ParseException {
    jj_consume_token(DO);
    jj_consume_token(LLAVEIZQ);
    Sentencias();
    jj_consume_token(LLAVEDER);
    jj_consume_token(WHILE);
    jj_consume_token(PARIZQ);
    Comparaciones();
    jj_consume_token(PARDER);
    jj_consume_token(PUNTOYCOMA);
  }

//WHILE
  static final public void SentenciaWhile() throws ParseException {
    jj_consume_token(WHILE);
    jj_consume_token(PARIZQ);
    Comparaciones();
    jj_consume_token(PARDER);
    jj_consume_token(DO);
    jj_consume_token(LLAVEIZQ);
    Sentencias();
    jj_consume_token(LLAVEDER);
  }

// ASIGN
  static final public void SentenciaAsignacion() throws ParseException {Token v1;
        Token v2;
        Token v3;
        int aux;
        String res;
        boolean imp = false;
    v1 = jj_consume_token(IDENTIFICADOR);
    jj_consume_token(IGUAL);
    TiposAsignaciones();
v2 = token;
        TokenAsignaciones.induccion_var(v1, v2);

        //res = TokenAsignaciones.checkAsing(v1, v2);
        //if(res != " "){System.out.println(res);imp = true;}

    label_12:
    while (true) {
      if (jj_2_5(2)) {
        ;
      } else {
        break label_12;
      }
      OpAritmetico();
      TiposAsignaciones();
v3 = token;
        TokenAsignaciones.induccion_var(v1, v3);

        //res = TokenAsignaciones.checkAsing(v1, v3);
        //if(res != " " && !imp){System.out.println(res);}

    }
  }

// Definicion de tipos de asignaciones
  static final public void TiposAsignaciones() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IDENTIFICADOR:{
      jj_consume_token(IDENTIFICADOR);
      break;
      }
    case NUMERO:{
      jj_consume_token(NUMERO);
      break;
      }
    case DECIMAL:{
      jj_consume_token(DECIMAL);
      break;
      }
    case CADENA:{
      jj_consume_token(CADENA);
      break;
      }
    case CARACTER:{
      jj_consume_token(CARACTER);
      break;
      }
    case BOOLEANO:{
      jj_consume_token(BOOLEANO);
      break;
      }
    default:
      jj_la1[30] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }
